--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/reset/reset.css" />
     <link rel="stylesheet" href="./style/glStyle/glStyle.css" />
+    <meta name="google-site-verification" content="bEgxKjiVtpsLPtUPA2cXjhpbkSCCf-SS6iPhCrC-1tQ" />
     <title>Weather Forecast</title>
   </head>
   <body>
@@ -83,12 +84,7 @@
         <div class="footer__container">
           <span class="footer__project-sign">Weather Forecast</span>
           <span class="footer__copyright-sign-year">&copy; 2023</span>
-          <a
-            href="https://github.com/Shist/Weather-Forecast"
-            target="_blank"
-            class="footer__github-link"
-            >GitHub
-          </a>
+         
         </div>
       </footer>
     </div>
