--- a/index.html
+++ b/index.html
@@ -89,5 +89,15 @@
       </footer>
     </div>
     <script src="./scripts/script.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QLBKCWH382"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QLBKCWH382');
+</script>
   </body>
+  
 </html>
